# vitapp

./: CMakeLists.txt  vitapp.hh
libpromoter/: CMakeLists.txt
libvitapp/: CMakeLists.txt  app.cc  app.hh  ctrl.cc  ctrl.hh  draw.cc  draw.hh  os.hh  promoter.cc  promoter.hh  singleton.hh
